<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="c.b.a.organizer.StartActivity">
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_4"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30"/>
    <TextView
        android:id="@+id/tv_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="55sp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_4" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_tittle"
        app:layout_constraintStart_toStartOf="@id/tv_tittle"
        app:layout_constraintEnd_toEndOf="@id/tv_tittle"
        tools:text="ДАТА" />
    <ProgressBar
        android:id="@+id/pb_server_connecting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        app:layout_constraintStart_toStartOf="@id/tv_date"
        app:layout_constraintEnd_toEndOf="@id/tv_date"
        android:layout_marginTop="65dp"
        />
    <Button
        android:id="@+id/btn_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:padding="20dp"
        android:text="@string/btn_repeat"
        android:layout_marginTop="65dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        app:layout_constraintStart_toStartOf="@id/tv_date"
        app:layout_constraintEnd_toEndOf="@id/tv_date"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_5"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67"/>

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_connect"
        android:textSize="25sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_date"
        app:layout_constraintStart_toStartOf="@+id/tv_date"
        app:layout_constraintTop_toTopOf="@+id/guideline_5" />

</android.support.constraint.ConstraintLayout>
